[package]
name = "mysqld-reload"
version = "0.2.0"
authors = ["Massimiliano Torromeo <massimiliano.torromeo@gmail.com>"]
edition = "2018"
description = "Reads the MySQL configuration files and applies the configured variables at runtime when their values don't match."

[dependencies]
configparser = "2.0.1"
dirs = "3.0.1"
mysql = "20.1.0"
structopt = "0.3.21"
users = "0.11.0"

[build-dependencies]
structopt = "0.3.21"
scraper = "0.12.0"
